# mutate

./: .gitignore  README.md  application.py  pyproject.toml
cmd/: mutate_command.py
lib/: log.py
lib/mutate/: mappings.py  mutator.py
